--- a/mi-primera-pagina/index.html
+++ b/mi-primera-pagina/index.html
@@ -1,14 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
+<head>
     <title>ProgramaYa!</title>
     <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <header>
-        <div class="container"></div>
+        <div class="container">
+            <p class="logo">Programa Ya!</p>
+            <nav>
+                <a href="#">Quienes Somos</a>
+                <a href="#">Nuestros Programas</a>
+                <a href="#">Características</a>
+            </nav>
+        </div>
     </header>
-    
+    <section id="hero">
+        <h1>Aprende a Programar<br>con los mejores</h1>
+        <button>APLICA YA!</button>
+    </section>
+
+    <section id="somos-proya">
+        <div class="container">
+            <div class="img-container"></div>
+            <h2>Somos Programa Ya!</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam quibusdam laborum magni
+                perspiciatis in, reprehenderit, quas exercitationem eaque eius, quisquam ut quidem modi temporibus
+                incidunt! Repellendus accusamus vitae dicta rem?</p>
+        </div>
+    </section>
+
+    <section id="nuestros-programas">
+        <div class="container">
+                <h2>Nuestros Programas</h2>
+                    <div class="carta">
+                        <h3>Programador Front-End</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
+                            molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
+                            necessitatibus quae, unde facere nostrum eos.</p>
+                            <button>+ Info</button>
+                            </div>
+                            <div class="carta">
+                        <h3>Programador Full-Stack</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
+                            molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
+                            necessitatibus quae, unde facere nostrum eos.</p>
+                            <button>+ Info</button>
+                            </div>
+                            <div class="carta">
+                        <h3>Programador Python</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
+                            molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
+                            necessitatibus quae, unde facere nostrum eos.</p>
+                            <button>+ Info</button>
+                            </div>
+        </div>
+    </section>
+
+    <section id="características">
+        <div class="container">
+            <ul>
+                <li>✅ 100% online</li>
+                <li>✅ flexibilidad de horarios</li>
+                <li>✅ soporte 1:1</li>
+                <li>✅ asistencia financiera</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="aplica-ya">
+        <h2>Listo para programar?</h2>
+        <button type="button">APLICA YA</button>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; ProrgamaYa 2024</p>
+        </div>
+    </footer>
 </body>
-</html> 
+</html>
