--- a/mi-primera-pagina/index.html
+++ b/mi-primera-pagina/index.html
@@ -9,23 +9,27 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Programa Ya!</p>
+            <p class="logo">ETEREAN</p>
             <nav>
-                <a href="#">Quienes Somos</a>
-                <a href="#">Nuestros Programas</a>
-                <a href="#">Características</a>
+                <a href="#somos-proya">BIOS</a>
+                <a href="#nuestros-programas">STUFF</a>
+                <a href="#características">TOUR</a>
             </nav>
         </div>
     </header>
     <section id="hero">
         <h1>Aprende a Programar<br>con los mejores</h1>
-        <button>APLICA YA!</button>
+        <form action="http://www.google.cl"><!--para que un boton te lleve a un link-->
+            <button>APLICA YA!</button>
+        </form>
+        
     </section>
 
     <section id="somos-proya">
         <div class="container">
+
             <div class="img-container"></div>
-            <h2>Somos Programa Ya!</h2>
+            <h2>Somos <span class="color-acento">Programa Ya!</span></h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam quibusdam laborum magni
                 perspiciatis in, reprehenderit, quas exercitationem eaque eius, quisquam ut quidem modi temporibus
                 incidunt! Repellendus accusamus vitae dicta rem?</p>
@@ -34,32 +38,34 @@
 
     <section id="nuestros-programas">
         <div class="container">
-                <h2>Nuestros Programas</h2>
-                    <div class="carta">
-                        <h3>Programador Front-End</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
-                            molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
-                            necessitatibus quae, unde facere nostrum eos.</p>
-                            <button>+ Info</button>
-                            </div>
-                            <div class="carta">
-                        <h3>Programador Full-Stack</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
-                            molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
-                            necessitatibus quae, unde facere nostrum eos.</p>
-                            <button>+ Info</button>
-                            </div>
-                            <div class="carta">
-                        <h3>Programador Python</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
-                            molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
-                            necessitatibus quae, unde facere nostrum eos.</p>
-                            <button>+ Info</button>
-                            </div>
+            <h2>Nuestros Programas</h2>
+            <div class="programas">
+                <div class="carta">
+                    <h3>Programador Front-End</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
+                        molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
+                        necessitatibus quae, unde facere nostrum eos.</p>
+                        <button>+ Info</button>
+                        </div>
+                        <div class="carta">
+                    <h3>Programador Full-Stack</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
+                        molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
+                        necessitatibus quae, unde facere nostrum eos.</p>
+                        <button>+ Info</button>
+                        </div>
+                        <div class="carta">
+                    <h3>Programador Python</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis voluptatem cumque
+                        molestiae dolorem, doloribus nemo delectus, praesentium magnam quo numquam minus illo. Praesentium
+                        necessitatibus quae, unde facere nostrum eos.</p>
+                        <button>+ Info</button>
+                        </div>
+            </div>
         </div>
     </section>
 
-    <section id="características">
+    <section id="caracteristicas">
         <div class="container">
             <ul>
                 <li>✅ 100% online</li>
@@ -70,7 +76,7 @@
         </div>
     </section>
 
-    <section id="aplica-ya">
+    <section id="final">
         <h2>Listo para programar?</h2>
         <button type="button">APLICA YA</button>
     </section>
